ui: backend: add email service and change UX for post details
